# Scripy

./: .gitignore  Claude.md  LICENSE  README.md  fileTrim.sh  pyproject.toml  rename_jpegs_by_date.py
.github/workflows/: tests.yml
docs/: CNAME  index.html
scripy/: agent.py  cli.py  config.py  executor.py  gates.py  prompts.py  reporter.py  theme.py  tools.py
scripy/tui/: app.py
tests/: test_agent_unit.py  test_clean.py  test_config.py  test_executor.py  test_gates.py  test_prompts.py
