[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scripy"
version = "0.1.0"
description = "Local-first CLI agent for generating small scripts using local LLMs"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "openai>=1.0",
    "rich>=13.0",
    "textual>=0.50",
]

[project.scripts]
scripy = "scripy.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[tool.ruff]
target-version = "py311"
line-length = 100
