[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scripy-cli"
version = "0.1.0"
description = "Local-first CLI agent for generating small scripts using local LLMs"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["llm", "ollama", "cli", "codegen", "local-ai", "agent", "LM Studio"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.1",
    "openai>=1.0",
    "rich>=13.0",
    "textual>=0.50",
]

[project.scripts]
scripy = "scripy.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["scripy"]

[tool.ruff]
target-version = "py311"
line-length = 100
